# mini-caffe

./: .gitignore  mini-caffe.cmake
example/: CMakeLists.txt
example/classification/: main.cpp
example/models/classification/: chars_label.txt  deploy.prototxt
example/models/ocr/: deploy.prototxt  label_utf8.txt
example/models/ocr/inception-bn-res-blstm/: deploy.prototxt
example/ocr/: main.cpp
include/caffe/: net.hpp
src/: net.cpp
src/layers/: DenseBlock_layer.cpp  DenseBlock_layer.cu  DenseBlock_layer.hpp  ctc_decoder_layer.cpp  ctc_decoder_layer.hpp  input_layer.cpp  lstm_layer_Junhyuk.cpp  lstm_layer_Junhyuk.cu  lstm_layer_Junhyuk.hpp  reverse_layer.cpp  reverse_layer.cu  reverse_layer.hpp  reverse_time_layer.cpp  reverse_time_layer.cu  reverse_time_layer.hpp  transpose_layer.cpp  transpose_layer.cu  transpose_layer.hpp
src/proto/: caffe.proto
